@@ -88,6 +88,10 @@ multi-signature generation
     smtp auth
 50. svctool.in: run qmail-smtpd with qmail group privilege to access
     control/host.mysql
+- 03/03/2023
+51. svctool.in: fixed libindimail control file generation
+52. svctool.in: fixed nooverwrite for qmail-send, slowq-send service
+53. create_services.in: run svctool only when running as uid 0
 
 * Mon Jan 30 2023 13:14:56 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.2-1.1%{?dist}
 Release 3.0.2-1.1 Start 08/09/2022 End 30/11/2023
